--- a/src/Mongo2Go/Mongo2Go.csproj
+++ b/src/Mongo2Go/Mongo2Go.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Helper\IMongoBinaryLocator.cs" />
     <Compile Include="Helper\UnixPortWatcher.cs" />
     <Compile Include="Helper\PortWatcherFactory.cs" />
+    <Compile Include="StorageEngineType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
